[package]
name = "skseloaderdll"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["std", "impl-default", "processthreadsapi", "winbase", "minwindef", "winnt", "ntdef", "libloaderapi", "memoryapi", "minwinbase", "synchapi", "winerror", "handleapi"] }
log = "0.4.14"
simple_logger = "1.13.0"
