[package]
name = "skseloaderdll"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["std", "impl-default", "winuser", "winver", "processthreadsapi", "winbase", "minwindef", "winnt", "ntdef", "libloaderapi", "memoryapi", "minwinbase", "synchapi", "winerror", "handleapi"] }
widestring = "0.4.3"
detour = { version = "0.8.0", default-features = false }
atomic = "0.5.0"
wide-literals = "0.2.0"
scan_fmt = "0.2.6"
c_str_macro = "1.0.3"
