[package]
name = "skseloaderrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["std", "impl-default", "processthreadsapi", "winbase", "minwindef", "winnt", "ntdef", "libloaderapi", "memoryapi", "minwinbase", "synchapi", "winerror", "handleapi"] }
byte-strings = "0.1.3"
log = "0.4.14"
simple_logger = "1.13.0"
structopt = "0.3"
widestring = "0.4.3"
wide-literals = "0.2.0"
